[gd_scene load_steps=3 format=2]

[ext_resource path="res://Modules/UI/Main Menu/MainMenu.tscn" type="PackedScene" id=2]
[ext_resource path="res://Modules/Main.gd" type="Script" id=4]

[node name="Main" type="Node"]
script = ExtResource( 4 )

[node name="MainMenu" parent="." instance=ExtResource( 2 )]

[connection signal="quit_game" from="MainMenu" to="." method="_on_MainMenu_quit_game"]
[connection signal="start_game" from="MainMenu" to="." method="_on_MainMenu_start_game"]
